--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Big+Shoulders:opsz,wght@10..72,100..900&family=Gideon+Roman&family=Londrina+Shadow&family=Madimi+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import url('https://www.nerdfonts.com/assets/css/webfont.css');
 
+
 body,
 html {
 
@@ -172,7 +173,7 @@ footer {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     text-decoration: none;
-    border: #282828, solid, 10px;
+ 
     -webkit-box-shadow: 0px -5px 1.5px 0.5px rgba(46, 52, 64, 1);
     -moz-box-shadow: 0px -5px 1.5px 0.5px rgba(46, 52, 64, 1);
     box-shadow: 0px -5px 1.5px 0.5px rgba(46, 52, 64, 1);
@@ -314,6 +315,7 @@ ul {
     margin-right: auto;
     transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;
     margin-top: 4em;
+    max-width: 70%;
     gap: 1em;
     background-color: #3b4252;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -333,5 +335,7 @@ ul {
 
 .choice {
     border-radius: 5px;
+    gap: 5px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  
 }
